# Changelog (dd/mm/yy)

## (12/01/25)

· 📦 ADD: Games > Portal (Source Engine) for aarch64.

· 👌 IMPROVE: Games > Half Life 2 launcher script for aarch64.

## (25/12/24)

· 📦 ADD: Games > Half Life 2 (Source Engine) for aarch64.

## (09/12/24)

· 👌 IMPROVE: Emulators > Amiberry (Amiga emulator) v7.0.0-RC1 for armhf/aarch64.

· 🐛 FIX: Games > Fallout.

## (06/12/24)

· 👌 IMPROVE: Server > Git Server.

## (05/11/24)

· 👌 IMPROVE: Devs > Docker.

· 👌 IMPROVE: Server > Git Server.

## (19/10/24)

· 📦 ADD: Others > Metasploit Framework.

## (01/10/24)

· 📦 ADD: Games > Carmageddon (AKA Dethrace) for aarch64.

· 👌 IMPROVE: Emulators > Speccy (Portable ZX-Spectrum emulator) for aarch64.

## (28/09/24)

· 📦 ADD: Mmedia > Spotube (Spotify Clone).

· 👌 IMPROVE: Others > Wine add Hangover v9.17 for aarch64.

## (06/09/24)

· 👌 IMPROVE: Others > Wine add Hangover v9.15 for aarch64.

· ❌ REMOVE: Others > Box86/Box64 installation (Only compilation is available).

## (03/09/24)

· 👌 IMPROVE: Emulation > PPSSPP v1.17.1-19410 (PSP Emulator) for aarch64.

## (20/08/24)

· 👌 IMPROVE: Games > Crispy-Doom 7.0.0 for aarch64.

## (10/07/24)

· 👌 IMPROVE: Games > Blood for aarch64.

· 👌 IMPROVE: Games > Xash3D (Half Life) for aarch64. Removed armfh support.

## (07/07/24)

· 👌 IMPROVE: Games > Arx Libertatis for aarch64.

· 🐛 FIX: Emulatos > residual.

## (24/06/24)

· 👌 IMPROVE: Games > Alien VS Predator for aarch64.

## (23/06/24)

· 👌 IMPROVE: Games > Abbaye des Morts 2.0.3 for aarch64.

## (16/06/24)

· 📦 ADD: Emulators > PCem for aarch64 (PCem is an emulator for old XT/AT-class PC).

## (09/06/24)

· 📦 ADD: Games > WipeOut for aarch64.

## (28/05/24)

· 👌 IMPROVE: Games > OpenClaw for aarch64.

· 👌 IMPROVE: Others > UXPlay (Airplay Mirroring) for armhf & aarch64.

## (06/05/24)

· 📦 ADD: Games > Hexen 2 for aarch64 (using engine fteqw).

## (10/04/24)

· 📦 ADD: Devs > SQLiteStudio.

## (07/04/24)

· 🐛 FIX: Emulatos > mGBA.

## (02/04/24)

· 📦 ADD: Games > Unreal Tournament 99.
