@@ -2,9 +2,8 @@
 #
 # Description : GemRB
 # Author      : Jose Cerrejon Gonzalez (ulysess@gmail_dot._com)
-#             : Thanks to @foxhound311 for his help with compilation issues
-# Version     : 1.1.0 (07/Aug/23)
-# Compatible  : Raspberry Pi 4
+# Version     : 1.2.0 (09/Feb/25)
+# Tested      : Raspberry Pi 5
 # Repository  : https://github.com/gemrb/gemrb
 # Help        : https://github.com/gemrb/gemrb/blob/master/INSTALL
 #             : https://gemrb.org/Manpage.html
@@ -15,13 +14,13 @@ clear
 check_board || { echo "Missing file helper.sh. I've tried to download it for you. Try to run the script again." && exit 1; }
 
 readonly INSTALL_DIR="$HOME/games"
-readonly VERSION="0.9.2"
-readonly INFO_RELEASE_URL="https://gemrb.org/2023/07/08/gemrb-0-9-2-released.html"
+readonly VERSION="0.9.4"
+readonly INFO_RELEASE_URL="https://gemrb.org/2023/07/08/g age.html#configuration"
 readonly INFO_SETTNGS_URL="https://gemrb.org/Manpage.html#configuration"
 readonly PACKAGES=(libvorbisidec1 libopenal1 libsdl2-mixer-2.0-0 libpng16-16 libglu1-mesa)
-readonly PACKAGES_DEV=(cmake libsdl2-dev libvorbis-dev libopenal-dev libsdl2-mixer-dev libpng-dev libfontconfig1-dev libfreetype6-dev libglew-dev libgles2-mesa-dev)
+readonly PACKAGES_DEV=(cmake libsdl2-dev libvorbis-dev libopenal-dev libsdl2-mixer-dev libpng-dev libfontconfig1-dev libfreetype6-dev libglew-dev libgles2-mesa-dev libvlc-dev clang)
 readonly BINARY_URL="https://misapuntesde.com/res/gemrb-0.8.8-armhf.tar.gz"
-readonly BINARY_64_BITS_URL="https://misapuntesde.com/res/gemrb-${VERSION}-arm64.tar.gz"
+readonly BINARY_64_BITS_URL="https://misapuntesde.com/rpi_share/gemrb-${VERSION}-arm64.tar.gz"
 readonly SOURCE_CODE_URL="https://github.com/gemrb/gemrb/archive/refs/tags/v${VERSION}.zip"
 readonly GAME_DATA_PATH="$INSTALL_DIR/gemrb/data"
 readonly GEMRBCFG_PATH="$INSTALL_DIR/gemrb/etc/gemrb/GemRB.cfg"
@@ -81,22 +80,29 @@ EOF
 }
 
 compile() {
-    # Tip: Better use cmake-gui | git clone form repo broke the compilation: Use the release.
+    local BUILD_INSTALL_DIR="$INSTALL_DIR/gemrb"
+
     install_packages_if_missing "${PACKAGES_DEV[@]}"
     mkdir -p "$HOME/sc" && cd "$_" || exit 1
     download_and_extract "$SOURCE_CODE_URL" "$HOME/sc"
     cd "$HOME/sc/gemrb-${VERSION}" || exit 1
     mkdir build && cd "$_" || exit 1
-    # -DOPENGL_BACKEND=GLES It doesn't work on 0.9.2. See https://github.com/gemrb/gemrb/issues/932 | https://github.com/gemrb/gemrb/issues/936 | https://github.com/gemrb/gemrb/pull/938
-    cmake .. -DSDL_BACKEND=SDL2 -DOPENGL_BACKEND=OpenGL -DCMAKE_BUILD_TYPE=RelWithDebInfo -DDISABLE_WERROR=ON -DSTATIC_LINK=enabled -DCMAKE_INSTALL_PREFIX="$HOME/games/gemrb" -DUSE_SDLMIXER=disabled -DSDL2MAIN_LIBRARY=/usr/lib/arm-linux-gnueabihf/libSDL2.so -DDISABLE_VIDEOCORE=ON -DFREETYPE_INCLUDE_DIRS=/usr/include/freetype2/ -DRPI=ON
-    echo -e "\nCompiling... Estimated time on RPi 4: < 30 min.\n"
+    cmake .. -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++ \
+        -DCMAKE_BUILD_TYPE=RelWithDebInfo \
+        -DDISABLE_WERROR=ON \
+        -DSTATIC_LINK=enabled \
+        -DSDL2MAIN_LIBRARY=/usr/lib/arm-linux-gnueabihf/libSDL2.so \
+        -DDISABLE_VIDEOCORE=ON \
+        -DFREETYPE_INCLUDE_DIRS=/usr/include/freetype2/ \
+        -DCMAKE_INSTALL_PREFIX="$BUILD_INSTALL_DIR" \
+        -DRPI=ON
+    echo -e "\nCompiling... Estimated time on RPi 5: < 8 min.\n"
     make_with_all_cores
-    read -p "Do you want to install globally the app (y/N)? " response
+    read -p "Do you want to install the app at $BUILD_INSTALL_DIR (y/N)? " response
     if [[ $response =~ [Yy] ]]; then
-        [[ ! -e $HOME/sc/gemrb/gemrb.desktop ]] && touch "$HOME/sc/gemrb/gemrb.desktop" # This file is missing and needed in latest compilations
         sudo make install
     fi
-    echo -e "\nDone!. Check the code at $HOME/sc/gemrb."
+    echo -e "\nDone!. Check the build at $HOME/sc/gemrb-$VERSION/build/gemrb."
     exit_message
 }
 
@@ -152,7 +158,7 @@ echo "
 GemRB (Infinite Engine) for Raspberry Pi
 ========================================
 
- · Version ${VERSION}
+ · Version ${VERSION} (0.8.8 for armhf)
  · + Info: ${INFO_RELEASE_URL}
  · Supported games: Baldur's Gate, Baldur's Gate 2 : SoA or ToB, Icewind Dale : HoW or ToTL, Icewind Dale 2 & Planescape Torment.
  · Settings are changed in the file ${GEMRBCFG_PATH} | + Info: ${INFO_SETTNGS_URL}
